--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>dr okra</title>
-	<style type="text/css">
-* {margin: 0; padding: 0;}
-body {display: block;
-width: 600px;
-margin: 30px auto;
-background-color: #eee;
-}
-img {margin-top: 2em; border:#fff 10px solid;}
-	</style>
+<meta charset="utf-8" />	
+	<title>test</title>
+<style>
+body {background-color: red; font-family: monospace;
+text-align: center; padding: 2em; font-size: 2em;}
+</style>
 </head>
 <body>
-<p>test</p>
+<p>hello : 22:18</p>
 </body>
 </html>
+
