--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ text-align: center; padding: 2em; font-size: 2em;}
 </style>
 </head>
 <body>
-<p>hello : 22:18</p>
+<p>type76</p>
 </body>
 </html>
 
