--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />	
 	<title>test</title>
 <style>
-body {background-color: red; font-family: monospace;
+body {background-color: #eee; font-family: monospace;
 text-align: center; padding: 2em; font-size: 2em;}
 </style>
 </head>
