--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>type2.0</title>
   <meta name="description" content="type76">
-  <meta name="author" content="SitePoint">
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css"></head>
 <body>
 
@@ -225,9 +225,19 @@ L 74 72.2 Z"/>
 </section>
 
 
+<script>
+if (navigator.serviceWorker.controller) {
+  console.log('registered')
+} else {
+  navigator.serviceWorker.register('sw.js', {
+    scope: './'
+  }).then(function(reg) {
+    console.log('Service worker has been registered for scope:'+ reg.scope);
+  });
+}
+</script>
 
 <script src="js/script.js"></script>
-<script src="js/colour.js"></script>
 
 </body>
 </html>
