--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title>type2.0</title>
   <meta name="description" content="type76">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/style.css"></head>
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
 
 <header>
