--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 <section id="container">
+	<a href="https://type76.com/index2.html">link</a>
 <form onsubmit="sendMessage();return false" id="inform">
   <fieldset>
     <button type="submit" value="Send" id="spkbut" >></button title="send">
