--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,7 @@
   <ul class="nav">
     <li><a href="index1.html">v1</a></li>
     <li><a href="index.html">v2</a></li>
+    <li><a href="index2.html">v3</a></li>
   </ul>
 
   <header>
