--- a/projects/loop/index.html
+++ b/projects/loop/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>word cloud + audio loop</title>
+	<title>random word cloud + audio loop</title>
 </head>
 <link rel="stylesheet" type="text/css" href="css/type1.css">
 
