--- a/projects/loop/index.html
+++ b/projects/loop/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>random word cloud + audio loop</title>
 </head>
-<link rel="stylesheet" type="text/css" href="css/type1.css">
+<link rel="stylesheet" type="text/css" href="../../css/type1.css">
 
 <style type="text/css">
 @font-face {
