--- a/projects/loop/index.html
+++ b/projects/loop/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>random word cloud + audio loop</title>
 </head>
-<!-- <link rel="stylesheet" type="text/css" href="../../css/type1.css"> -->
+<link rel="stylesheet" type="text/css" href="../../css/type1.css">
 
 <style type="text/css">
 @font-face {
@@ -32,7 +32,7 @@ body {
   margin: 0 auto;
 }
 
-.container { 
+.xcontainer { 
   height: 100vh;
   position: relative; 
   z-index: 2;
@@ -173,7 +173,7 @@ font-size: 1em;
 </div><!-- face  -->
 </button>
 
-  <div class="container">
+  <div class="xcontainer">
     <div class="vertical-center">
       <canvas id="xcanvas" ></canvas>
     </div><!-- vert -->
