--- a/projects/loop/index.html
+++ b/projects/loop/index.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" type="text/css" href="../../css/type1.css">
 
 <style type="text/css">
+	#interface {z-index:33;}
+	
 @font-face {
   font-family: 'novecento';
   src: url('novecento-bold.ttf') format('truetype');
