--- a/projects/loop/index.html
+++ b/projects/loop/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>random word cloud + audio loop</title>
 </head>
-<link rel="stylesheet" type="text/css" href="../../css/type1.css">
+<!-- <link rel="stylesheet" type="text/css" href="../../css/type1.css"> -->
 
 <style type="text/css">
 	#interface {z-index:33;}
@@ -160,12 +160,7 @@ font-size: 1em;
 
 </style>
 <body>
-<div id="interface">
-<label class="switch">
-  <input id="switchValue" type="checkbox" checked oninput="invert()">
-  <span class="slider round"></span>
-</label>
-</div><!-- interface -->
+
 	
 <button id="go" type="submit" value="Send"  onclick="press();" style="display: none;">
 <div id="botface">
