--- a/index.html
+++ b/index.html
@@ -25,43 +25,15 @@
 
 <ul class="projects">
 <li><a href="projects/tent/">tent
-<!-- <img src="template/1.jpg" width="600" height="300" alt="pic one"> -->
 </a></li>
 <li><a href="projects/drive/">drive
-<!-- <img src="template/2.jpg" width="600" height="300" alt="pic one"> -->
 </a></li>
 <li><a href="projects/baobab/">baobab
-<!-- <img src="template/3.jpg" width="600" height="300" alt="pic one"> -->
+</a></li>
+<li><a href="projects/loop/">loop
 </a></li>
 </ul>
 
-
-<!-- <ul class="projects">
-<li><a href="#">baobab
-<img src="template/1.jpg" width="600" height="300" alt="pic one">
-</a></li>
-
-<li><a href="#">drive
-<img src="template/2.jpg" width="600" height="300" alt="pic one">
-</a></li>
-
-
-<li><a href="#">3D chatbot
-<img src="template/3.jpg" width="600" height="300" alt="pic one">
-</a></li>
-
-<li><a href="#">2D chatbot
-<img src="template/1.jpg" width="600" height="300" alt="pic one">
-</a></li>
-
-<li><a href="#">loop
-<img src="template/2.jpg" width="600" height="300" alt="pic one">
-</a></li>
-
-<li><a href="#">globe
-<img src="template/3.jpg" width="600" height="300" alt="pic one">
-</a></li>
-</ul> -->
 
 </div><!-- container -->
 
