--- a/projects/lipsync/index.html
+++ b/projects/lipsync/index.html
@@ -61,12 +61,12 @@ color: #eee;}
 
 
 
-<script src="three.min.js"></script>
-<script src="OrbitControls.min.js"></script>
-<script src="tween.js"></script>
-<script src="GLTFLoader.js"></script>
-<script src="rant.min.js"></script>
-<script src="sentimood.js"></script>
+<script src="../js/three.min.js"></script>
+<script src="../js/OrbitControls.min.js"></script>
+<script src="../js/tween.js"></script>
+<script src="../js/GLTFLoader.js"></script>
+<script src="../js/rant.min.js"></script>
+<script src="../js/sentimood.js"></script>
 
 <script>
 // possible rant inputs
