--- a/projects/lipsync/index.html
+++ b/projects/lipsync/index.html
@@ -63,7 +63,7 @@ color: #eee;}
 
 <script src="../js/three.min.js"></script>
 <script src="../js/OrbitControls.min.js"></script>
-<script src="../js/tween.js"></script>
+<script src="../js/tween.min.js"></script>
 <script src="../js/GLTFLoader.js"></script>
 <script src="../js/rant.min.js"></script>
 <script src="../js/sentimood.js"></script>
