--- a/projects/earth/index.html
+++ b/projects/earth/index.html
@@ -190,7 +190,7 @@
     <div id="container"></div>
 
                 <script src="../js/three.min.js"></script>
-                <script src="../js/OrbitControls.js"></script>
+                <script src="../js/OrbitControls.min.js"></script>
                 <script src="../js/tss.js"></script>
                 <script src="../js/tween.min.js"></script>
 
