--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
 
 <div class="container">
 <header class="name">Projects</header>
-
+<p>Projects, game mechanic prototypes and elements in javascript</p>
+  
 <ul class="projects">
 <li><a href="projects/tent/">tent
-</a></li>
+  </a><span>tent configuration web app</span></li>
 <li><a href="projects/drive/">drive
-</a></li>
+</a><span>basic driving game prototype</span></li>
 <li><a href="projects/baobab/">baobab
-</a></li>
+</a><span>audio generation with 3D feedback</span></li>
 <li><a href="projects/loop/">loop
-</a></li>
+</a><span>random word cloud (click the square)</span></li>
 <li><a href="projects/lipsync/">lipsync
-</a></li>
+</a><span>lip sync method</span></li>
 <li><a href="projects/earth/">earth
-</a></li>
+</a><span>earth game prototype</span></li>
 </ul>
 
 
