--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     font-weight: normal;
     font-style: normal;
 }
-a {text-decoration: none; background:#ccc;}
+a {text-decoration: none; background:#ccc;
+    text-transform:uppercase;}
     
 body {font-family: monospace; 
 margin: 20px 120px 20px 20px;
