--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     font-style: normal;
 }
 a {text-decoration: none; background:#ccc;
-    text-transform:uppercase;}
+    text-transform:uppercase; padding:5px;}
     
 body {font-family: monospace; 
 margin: 20px 120px 20px 20px;
