--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@ line-height: 1.8em;
 .container ul li {
 margin-bottom: 2em;
 }
+.container ul li span {
+margin-left:5px;
+    }
 
-.container ul li:hover,
+    .container ul li:hover,
 ul.projects {
 list-style: none;
 }
