--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body.dark {
   to {color: #eee;
     background: #333;}
 }
-body.dark a {color: orange;}
+body.dark a {color: orange; background:#000;}
 
 .header {
 margin: 1em 0 1em 0;
