--- a/index.html
+++ b/index.html
@@ -189,5 +189,14 @@ function invert() {
 
 </script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134663235-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-134663235-1');
+</script>
+
 </body>
 </html>
