--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, shrink-to-fit=0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>type76</title>
-<!-- <link rel="stylesheet" type="text/css" href="css/type1.css"> -->
   <style>
     article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden],template{display:none}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}a{background:transparent}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}hr{box-sizing:content-box;height:0}mark{background:#ff0;color:#000}code,kbd,pre,samp{font-family:monospace,serif;font-size:1em}pre{white-space:pre-wrap}q{quotes:"\201C" "\201D" "\2018" "\2019"}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:0}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0}button,input{line-height:normal}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="search"]{-webkit-appearance:textfield;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}@font-face {
     font-family: monospace;
@@ -26,8 +25,9 @@ a {text-decoration: none; background:#ccc;
     text-transform:uppercase; padding:5px;}
     
 body {font-family: monospace; 
-margin: 20px 120px 20px 20px;
+margin: 20px auto 20px auto;
 background: #eee; color: #333;
+width: 500px;
 }
 body.dark {  
   animation-delay: 0.4s;
@@ -68,13 +68,24 @@ margin: 0; padding: 1em 0;
 line-height: 1.8em;
 }
 .container ul li {
-margin-bottom: 2em;
+margin: 2em 0;
 }
 .container ul li span {
 margin-left:5px;
     }
 
-    .container ul li:hover,
+.container ul li a img {
+padding: 4px;
+background: #fff;
+}
+
+.container ul li a:hover img {
+  background: #ccc;
+}
+
+
+
+.container ul li:hover,
 ul.projects {
 list-style: none;
 }
@@ -164,20 +175,21 @@ top: 20px; right: 20px;}
 </div><!-- header -->
 
 <div class="container">
-<header class="name">Projects</header>
-  
+<header class="name">Projects and experiments using javascript. </header>
+
+
 <ul class="projects">
-<li><a href="projects/tent/">tent
-  </a><span>tent configuration web app</span></li>
-<li><a href="projects/drive/">drive
+<li><a href="projects/tent/">tent <img src="projects/img/tent.jpg" alt="3D rendered tent">
+  </a><span>Tent configuration web app.</span></li>
+<li><a href="projects/drive/">drive <img src="projects/img/drive.jpg" alt="rocket ship on the grid">
 </a><span>basic driving game prototype</span></li>
-<li><a href="projects/baobab/">baobab
+<li><a href="projects/baobab/">baobab <img src="projects/img/baobab.jpg" alt="black tree with white leaves">
 </a><span>audio generation with 3D feedback</span></li>
-<li><a href="projects/loop/">loop
+<li><a href="projects/loop/">loop <img src="projects/img/loop.jpg" alt="interlocking random words">
 </a><span>random word cloud (click the square)</span></li>
-<li><a href="projects/lipsync/">lipsync
+<li><a href="projects/lipsync/">lipsync <img src="projects/img/lipsync.jpg" alt="3D cartoon face">
 </a><span>lip sync method</span></li>
-<li><a href="projects/earth/">earth
+<li><a href="projects/earth/">earth <img src="projects/img/earth.jpg" alt="pixellated globe">
 </a><span>earth game prototype</span></li>
 </ul>
 
