--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@ body.dark a {color: orange; background:#000;}
 .header {
 margin: 1em 0 1em 0;
 font-size: 2em;
+display: block;
+width: 480px;
+height: 480px;
+padding: 10px;
+background: url(css/76logo.png) center center no-repeat;
+color: #333;
 }
 
-
-.header:after {
-font-size: 0.5em;
-content: '--';
-}
 
 .container {
 display: block;
