--- a/index.html
+++ b/index.html
@@ -180,17 +180,17 @@ top: 20px; right: 20px;}
 
 
 <ul class="projects">
-<li><a href="projects/tent/">tent <img src="projects/img/tent.jpg" alt="3D rendered tent">
+<li><a href="projects/tent/">tent <img src="type76.github.io/projects/img/tent.jpg" alt="3D rendered tent">
   </a><span>Tent configuration web app.</span></li>
-<li><a href="projects/drive/">drive <img src="projects/img/drive.jpg" alt="rocket ship on the grid">
+<li><a href="projects/drive/">drive <img src="type76.github.io/projects/img/drive.jpg" alt="rocket ship on the grid">
 </a><span>basic driving game prototype</span></li>
-<li><a href="projects/baobab/">baobab <img src="projects/img/baobab.jpg" alt="black tree with white leaves">
+<li><a href="projects/baobab/">baobab <img src="type76.github.io/projects/img/baobab.jpg" alt="black tree with white leaves">
 </a><span>audio generation with 3D feedback</span></li>
-<li><a href="projects/loop/">loop <img src="projects/img/loop.jpg" alt="interlocking random words">
+<li><a href="projects/loop/">loop <img src="type76.github.io/projects/img/loop.jpg" alt="interlocking random words">
 </a><span>random word cloud (click the square)</span></li>
-<li><a href="projects/lipsync/">lipsync <img src="projects/img/lipsync.jpg" alt="3D cartoon face">
+<li><a href="projects/lipsync/">lipsync <img src="type76.github.io/projects/img/lipsync.jpg" alt="3D cartoon face">
 </a><span>lip sync method</span></li>
-<li><a href="projects/earth/">earth <img src="projects/img/earth.jpg" alt="pixellated globe">
+<li><a href="projects/earth/">earth <img src="type76.github.io/projects/img/earth.jpg" alt="pixellated globe">
 </a><span>earth game prototype</span></li>
 </ul>
 
