--- a/index.html
+++ b/index.html
@@ -187,11 +187,13 @@ top: 20px; right: 20px;}
 <li><a href="projects/baobab/">baobab <img src="type76.github.io/projects/img/baobab.jpg" alt="black tree with white leaves">
 </a><span>audio generation with 3D feedback</span></li>
 <li><a href="projects/loop/">loop <img src="type76.github.io/projects/img/loop.jpg" alt="interlocking random words">
-</a><span>random word cloud (click the square)</span></li>
-<li><a href="projects/lipsync/">lipsync <img src="type76.github.io/projects/img/lipsync.jpg" alt="3D cartoon face">
-</a><span>lip sync method</span></li>
+</a><span>random word cloud with audio loop (click the square)</span></li>
 <li><a href="projects/earth/">earth <img src="type76.github.io/projects/img/earth.jpg" alt="pixellated globe">
-</a><span>earth game prototype</span></li>
+</a><span>earth game</span></li>
+<li><a href="projects/earth/">earth <img src="type76.github.io/projects/img/earth.jpg" alt="pixellated globe">
+</a><span>animated 2D face with lip sync generated from text</span></li>
+<li><a href="projects/lipsync/">lipsync <img src="type76.github.io/projects/img/lipsync.jpg" alt="3D cartoon face">
+</a><span>animated 3D face with lip sync generated from text</span></li>
 </ul>
 
 
