--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ top: 20px; right: 20px;}
 </a><span>random word cloud with audio loop (click the square)</span></li>
 <li><a href="projects/earth/">earth <img src="type76.github.io/projects/img/earth.jpg" alt="pixellated globe">
 </a><span>earth game</span></li>
-<li><a href="projects/earth/">earth <img src="type76.github.io/projects/img/earth.jpg" alt="pixellated globe">
+<li><a href="projects/bot/">bot <img src="type76.github.io/projects/img/bot.jpg" alt="2D cartoon face">
 </a><span>animated 2D face with lip sync generated from text</span></li>
 <li><a href="projects/lipsync/">lipsync <img src="type76.github.io/projects/img/lipsync.jpg" alt="3D cartoon face">
 </a><span>animated 3D face with lip sync generated from text</span></li>
