--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@ body.dark {
   to {color: #eee;
     background: #333;}
 }
+    
 body.dark a {color: orange; background:#000;}
 
+    body.dark header {  
+color: #eee;
+}
+
+    
 .header {
 margin: 1em 0 1em 0;
 font-size: 2em;
