--- a/index.html
+++ b/index.html
@@ -170,11 +170,14 @@ top: 20px; right: 20px;}
 
 <ul class="projects">
 <li><a href="projects/tent/">tent <img src="projects/img/tent.jpg" alt="3D rendered tent">
-  </a><span>Tent configuration web app.</span></li>
+</a><span>Tent configuration web app.</span></li>
+  
 <li><a href="projects/drive/">drive <img src="projects/img/drive.jpg" alt="rocket ship on the grid">
 </a><span>basic driving game prototype</span></li>
+  
 <li><a href="projects/baobab/">baobab <img src="projects/img/baobab.jpg" alt="black tree with white leaves">
 </a><span>audio generation with 3D feedback</span></li>
+  
 <li><a href="projects/loop/">loop <img src="projects/img/loop.jpg" alt="interlocking random words">
 </a><span>Random word cloud with audio loop (click the square)</span></li>
 
@@ -182,11 +185,10 @@ top: 20px; right: 20px;}
 </a><span>Globe UI</span></li>
 
 <li><a href="projects/bot/">bot <img src="type76.github.io/projects/img/bot.jpg" alt="2D cartoon face">
-</a><span>Animated 2D face with lip sync generated from text and voice api.</span></li>
-
+</a><span>Animated 2D face with lip sync generated from text.</span></li>
 
 <li><a href="projects/lipsync/">lipsync <img src="projects/img/lipsync.jpg" alt="3D cartoon face">
-</a><span>Animated 3D face with lip sync generated from text and voice api.</span></li>
+</a><span>Animated 3D face with lip sync generated from text.</span></li>
 </ul>
 
 
