--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     font-weight: normal;
     font-style: normal;
 }
-a {text-decoration: none; background:#ccc;
-    text-transform:uppercase; padding:5px;}
+
+.container a {text-decoration: none; text-transform:uppercase;}
     
 body {font-family: monospace; 
 margin: 20px auto 20px auto;
@@ -63,6 +63,11 @@ margin: 2em 0;
 .container ul li span {
 margin-left:5px;
     }
+
+.container ul li a {
+background: transparent;
+}
+
 
 .container ul li a img {
 padding: 4px;
@@ -149,7 +154,7 @@ top: 20px; right: 20px;}
     background-color: #eee;
 }
 
-
+#footer { line-height: 2em; }
   </style>
 </head>
 <body>
@@ -170,29 +175,31 @@ top: 20px; right: 20px;}
 
 <ul class="projects">
 <li><a href="projects/tent/">tent <img src="projects/img/tent.jpg" alt="3D rendered tent">
-</a><span>Tent configuration web app.</span></li>
-  
+  </a><span>Tent configuration web app</span></li>
 <li><a href="projects/drive/">drive <img src="projects/img/drive.jpg" alt="rocket ship on the grid">
-</a><span>basic driving game prototype</span></li>
-  
+</a><span>Basic driving game prototype</span></li>
 <li><a href="projects/baobab/">baobab <img src="projects/img/baobab.jpg" alt="black tree with white leaves">
-</a><span>audio generation with 3D feedback</span></li>
-  
+</a><span>Audio generation with 3D feedback</span></li>
 <li><a href="projects/loop/">loop <img src="projects/img/loop.jpg" alt="interlocking random words">
-</a><span>Random word cloud with audio loop (click the square)</span></li>
+</a><span>Random word cloud with audio loop (click the square to play)</span></li>
 
 <li><a href="projects/earth/">earth <img src="projects/img/earth.jpg" alt="pixellated globe">
 </a><span>Globe UI</span></li>
 
-<li><a href="projects/bot/">bot <img src="type76.github.io/projects/img/bot.jpg" alt="2D cartoon face">
-</a><span>Animated 2D face with lip sync generated from text.</span></li>
+<li><a href="projects/bot/">bot <img src="projects/img/bot.jpg" alt="2D cartoon face">
+</a><span>Animated 2D face with lip sync generated from text</span></li>
+
 
 <li><a href="projects/lipsync/">lipsync <img src="projects/img/lipsync.jpg" alt="3D cartoon face">
-</a><span>Animated 3D face with lip sync generated from text.</span></li>
+</a><span>Animated 3D face with lip sync generated from text</span></li>
 </ul>
 
 
 </div><!-- container -->
+
+<div id="footer">
+<p>My work can be seen at <a href="http://io76.com">io76.com</a>. <br>Contact : <a href="mailto:osmanjaro@gmail.com">osmanjaro@gmail.com</a>.</p>
+</div>
 
 <script>
 // button
