--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@ top: 20px; right: 20px;}
 }
 
 #footer { line-height: 2em; }
+#footer:before { 
+  content: '--';
+  display: block;
+  line-height: 2em; }
   </style>
 </head>
 <body>
