--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ top: 20px; right: 20px;}
 <li><a href="projects/drive/">drive <img src="projects/img/drive.jpg" alt="rocket ship on the grid">
 </a><span>Basic driving game prototype</span></li>
 <li><a href="projects/baobab/">baobab <img src="projects/img/baobab.jpg" alt="black tree with white leaves">
-</a><span>Audio generation with 3D feedback</span></li>
+</a><span>Audio generation with 3D feedback (toggle the switch). <a href="https://github.com/ichabodcole/BinauralBeatJS">Binaural beats</a> with extra visuals.</span></li>
 <li><a href="projects/loop/">loop <img src="projects/img/loop.jpg" alt="interlocking random words">
 </a><span>Random word cloud with audio loop (click the square to play)</span></li>
 
