--- a/projects/baobab/index.html
+++ b/projects/baobab/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- This project is based on <a href="https://github.com/ichabodcole/BinauralBeatJS">Binaural beats</a>. -->
 <html>
 <head>
 	<title>baobab</title>
