--- a/projects/baobab/index.html
+++ b/projects/baobab/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<!-- This project is based on <a href="https://github.com/ichabodcole/BinauralBeatJS">Binaural beats</a>. -->
+
+<!-- 
+This project is based on Binaural beats. Respect.
+https://github.com/ichabodcole/BinauralBeatJS
+ -->
+
 <html>
 <head>
 	<title>baobab</title>
