--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ color: #eee;
   to {color: #eee;
     background-color: #333;}
 }
-body.dark a {color: orange; background-color:#000;}
+    
+body.dark a {color: orange;}
 
 .header {
 margin: 1em 0 1em 0;
