--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     font-style: normal;
 }
 
+a {cursor:pointer;}
 .container a {text-decoration: none; text-transform:uppercase;}
     
 body {font-family: monospace; 
