--- a/index.html
+++ b/index.html
@@ -156,11 +156,13 @@ top: 20px; right: 20px;}
     background-color: #eee;
 }
 
-#footer { line-height: 2em; }
+#footer { line-height: 2em; margin-bottom:2em; }
 #footer:before { 
   content: '--';
   display: block;
-  line-height: 2em; }
+  line-height: 2em; 
+}
+    
   </style>
 </head>
 <body>
