--- a/projects/lipsync/index.html
+++ b/projects/lipsync/index.html
@@ -48,7 +48,7 @@ color: #eee;}
 <div class="info">
 <form onsubmit="sendMessage();return false" id="inform">
 <button type="submit" value="Send"  id="sendmsg"   >&gt;</button>
-<input type="text" size="32" name="message" id="input" autocomplete="off" onkeyup="cleanbf()" onkeydown="cleanbf()" tabindex="1" value="My uncle was a great professor and scientist and engineer, Dr. John Trump at MIT. Good genes, very good genes, OK, very smart. The Wharton School of Finance, very good, very smart." >
+<input type="text" size="32" name="message" id="input" autocomplete="off" onkeyup="cleanbf()" onkeydown="cleanbf()" tabindex="1" value="My uncle was a great professor and scientist and engineer. Good genes, very good genes, OK, very smart." >
 
 <input type="range" min="0" max="2" value="1" step="0.1" id="pitch" >
 
