--- a/projects/lipsync/index.html
+++ b/projects/lipsync/index.html
@@ -26,7 +26,7 @@ border: none; background: rgba(255,255,255,0.1); cursor: pointer;}
 button:hover {background: rgba(255,255,255,0.3);}
 button:focus {outline: none;}
 #bubble {position: absolute; text-transform: lowercase;
-top: 12px; right: 22px; font-size: 2em; color: #eee;}
+top: 12px; left: 60px; font-size: 2em; color: #eee;}
 #topl {position: absolute;top: 12px; left: 12px;}
 #vars {position: absolute; bottom: 12px; right: 12px;
 color: #eee;}
