--- a/projects/tent/index.html
+++ b/projects/tent/index.html
@@ -95,7 +95,7 @@ body {
 		<button id="seating">seating</button>
 		<button id="loo">wc</button>
 		<button id="bed">bed</button>
-
+		<a href="http://www.ecotz.com/freeform" title="go to tent information page">Link to product</a>
 	</div>
 
 <script src="../js/three.min.js"></script>
