--- a/projects/destroy/index.html
+++ b/projects/destroy/index.html
@@ -103,11 +103,11 @@ camera.position.z = 0;
 
 
 var controls = new THREE.OrbitControls(camera, renderer.domElement);
-// controls.maxPolarAngle = Math.PI*0.6;
+controls.maxPolarAngle = Math.PI*0.5;
 controls.enableDamping = true;
 controls.dampingFactor = 0.9;
-// controls.maxDistance = 25;
-// controls.minDistance = 7;
+controls.maxDistance = 25;
+controls.minDistance = 7;
 controls.enablePan = false;
 controls.target.set( 0, 2, 0 );
 
