--- a/projects/destroy/index.html
+++ b/projects/destroy/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>all 3</title>
+		<title>destroy</title>
 		<style>
 			body { margin: 0; 
 				/*background: #d80000; */
@@ -10,9 +10,7 @@
 			canvas { width: 100%; height: 100% }
 			#hud { position: absolute; width: 100%; text-align: center; bottom: 0;}
 			#hud button { background: transparent; border:none; outline:none; cursor: pointer; font-family: monospace; font-size: 3em; padding: 0.5em; color: #fff;}
-			#go {left: 1em; display: none;}
-			#go.show {left: 1em; display: block;}
-			.on {background: #fff; color: red !important;}
+			.on {color: red !important;}
 			.hideall {position: absolute; left: 12px;}
 		</style>
 	</head>
