--- a/projects/web/index.html
+++ b/projects/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>web</title>
 	<style type="text/css">
 	body, input {margin: 0; background: #000; color: #fff; font-family: monospace; overflow: hidden;}
 	#hud {position: absolute; color: #fff; margin: 1em; }
